--- a/client/src/Calendar/Calendar.css
+++ b/client/src/Calendar/Calendar.css
@@ -45,7 +45,7 @@ h1, h2, h3, h4, h5, p{
 	border-radius: 4px;
 	overflow: hidden;
 	width: 100%;
-	height: 450px;
+	height: 400px;
 	background-color: #ffffff;
 	color: #333333;
 }
@@ -82,51 +82,11 @@ h1, h2, h3, h4, h5, p{
 
 .calendar .leftCol{
 	width: 40%;
-	background-color: #F48989;
-}
-
-.calendar .noteList li{
-	color: #ffffff;
-	margin-bottom: 10px;
-}
-
-.calendar .notes p,
-.calendar .notes input,
-.calendar .noteList li{
-	font-weight: 300;
-	font-size: 14px;
-}
-
-.calendar .notes p{
-	border-bottom: solid 1px rgba(255,255,255,0.4);
-}
-
-.calendar .notes input{
-	background-color: #F48989;
-	color: #ffffff;
-	border: none;
-	width: 200px;
-}
-
-.calendar .addNote,
-.calendar .removeNote{
-	float: right;
-	color: rgba(255,255,255,0.4);
-	font-weight: bold;
-	margin-left: 20px;
-}
-
-.calendar .addNote:hover,
-.calendar .removeNote:hover{
-	color: #ffffff;
-}
-
-.calendar .addNote{
-	font-size: 16px;
+	background-color: #f7d7d8;
 }
 
 .calendar .leftCol h1{
-	color: #ffffff;
+	color: black;
 	margin-bottom: 40px;
 }
 
@@ -140,22 +100,19 @@ h1, h2, h3, h4, h5, p{
 	margin-bottom: 70px;
 }
 .calendar .months li,
-.calendar .weekday li,
 .calendar .days li{
 	float: left;
 	text-transform: uppercase;
 }
-.calendar .months li:hover,
-.calendar .weekday li:hover{
-	background-color: #747978;
+.calendar .months li:hover{
+	background-color: #f7d7d8
 }
 
 .calendar .days li:hover {
-	background-color: #F5A1A3
+	background-color: #f7d7d8
 }
 
 .calendar .months li a,
-.calendar .weekday li a,
 .calendar .days li div{
 	display: block;
 	color: #747978;
@@ -163,7 +120,7 @@ h1, h2, h3, h4, h5, p{
 
 .calendar .months li div{
 	font-size: 10px;
-	color: #C7BEBE;
+	color: #747978;
 	text-align: center;
 	width: 32px;
 	margin-bottom: 20px;
