--- a/client/src/Calendar/Day.css
+++ b/client/src/Calendar/Day.css
@@ -5,7 +5,7 @@
     text-rendering: optimizeLegibility;
     width: 100%
 }
-.row { 
+.hour-row { 
     width: 100%;
     height: 50px;
 }
@@ -15,19 +15,21 @@
     color: #C7BEBE;
     display: inline-block;
     font-family: Helvetica, Arial, sans-serif;
-    margin-left:5%;
+    margin-left:4%;
 }
 .line{
     width:90%;
     background-color: #C7BEBE;
     display: inline-block;
-    margin-top: 7px
+    position: absolute;
+    margin-top: 2%;
+    margin-left: 1%
 }
 .vertical-line {
     background-color: #C7BEBE;
     position: absolute;
     height: 1200px;
-    margin-left: 9%;
+    margin-left: 11%;
     margin-top: -3%;
 }
 .display-date {
